# RedAGI

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
backend/: .env  Agents.py  auth.py  database.py  main.py  project_manager.py  pyproject.toml  requirements.txt  schemas.py
backend/prompt/: Analysis.txt  Attack.txt  Leader.txt  Reconn.txt  Report.txt
backend/routes/: auth.py  chat.py  monitor.py  sessions.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  i18n.tsx  styles.css
frontend/src/api/: auth.ts  client.ts  monitor.ts  sessions.ts
frontend/src/components/: ChatArea.tsx  RightPanel.tsx  Sidebar.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx
